--- a/freetsrap.css
+++ b/freetsrap.css
@@ -1,6 +1,7 @@
 :root,
 [data-theme=light] {
     --text-color: #000000;
+    --background-color: #f5f5f5;
     --blue: #0d6efd;
     --indigo: #6610f2;
     --purple: #6f42c1;
@@ -128,6 +129,7 @@
 [data-theme=dark] {
     color-scheme: dark;
     --text-color: #fff;
+    --background-color: #222;
     --blue: #0d6efd;
     --indigo: #6610f2;
     --purple: #6f42c1;
@@ -357,7 +359,7 @@ p {
     margin-bottom: 20px;
     color: var(--text-color);
     /* Updated */
-    background-color: var(--gray-900);
+    background-color: var(--background-color);
     /* Updated */
     padding: 20px;
     border-radius: 10px;
