--- a/freetsrap.css
+++ b/freetsrap.css
@@ -26,11 +26,17 @@
     --gray-800: #343a40;
     --gray-900: #212529;
     --primary: #0d6efd;
+    --primary-hover: #0a58ca;
     --secondary: #6c757d;
+    --secondary-hover: #5c636a;
     --success: #198754;
+    --success-hover: #157347;
     --info: #0dcaf0;
+    --info-hover: #0da5c0;
     --warning: #ffc107;
+    --warning-hover: #d39e00;
     --danger: #dc3545;
+    --danger-hover: #bd2130;
     --light: #f8f9fa;
     --dark: #212529;
     --primary-rgb: 13, 110, 253;
@@ -154,11 +160,17 @@
     --gray-800: #343a40;
     --gray-900: #212529;
     --primary: #0d6efd;
+    --primary-hover: #0a58ca;
     --secondary: #6c757d;
+    --secondary-hover: #5c636a;
     --success: #198754;
+    --success-hover: #157347;
     --info: #0dcaf0;
+    --info-hover: #0da5c0;
     --warning: #ffc107;
+    --warning-hover: #d39e00;
     --danger: #dc3545;
+    --danger-hover: #bd2130;
     --light: #f8f9fa;
     --dark: #212529;
     --primary-rgb: 13, 110, 253;
